@@ -113,6 +113,8 @@ $Id$
 + [interface] AJAXification on various pages 
 
 3.3.7.0 (not yet released)
+- patch #3050492 [PDF scratchboard] Cannot drag table box to the edge after
+  a page size increase, thanks to Martin Schönberger - mad05
 
 3.3.6.0 (not yet released)
 - bug #3033063 [core] Navi gets wrong db name
